exports[`Trigger Duck buildKonnectorTrigger creates a trigger 1`] = `
Object {
  "_type": "io.cozy.triggers",
  "attributes": Object {
    "arguments": "0 15 14 * * 4",
    "type": "@cron",
    "worker": "konnector",
    "worker_arguments": Object {
      "account": "963a51f6cdd34401b0904de32cc5578d",
      "folder_to_save": "daa147092e1c4a1da8c991cb2a194adc",
      "konnector": "test",
    },
  },
}
`;

exports[`Trigger Duck buildKonnectorTrigger creates a trigger with a daily frequency 1`] = `
Object {
  "_type": "io.cozy.triggers",
  "attributes": Object {
    "arguments": "0 15 14 * * *",
    "type": "@cron",
    "worker": "konnector",
    "worker_arguments": Object {
      "account": "963a51f6cdd34401b0904de32cc5578d",
      "konnector": "test",
    },
  },
}
`;

exports[`Trigger Duck buildKonnectorTrigger creates a trigger with a monthly frequency 1`] = `
Object {
  "_type": "io.cozy.triggers",
  "attributes": Object {
    "arguments": "0 15 14 25 * *",
    "type": "@cron",
    "worker": "konnector",
    "worker_arguments": Object {
      "account": "963a51f6cdd34401b0904de32cc5578d",
      "konnector": "test",
    },
  },
}
`;

exports[`Trigger Duck buildKonnectorTrigger creates a trigger with an hourly frequency 1`] = `
Object {
  "_type": "io.cozy.triggers",
  "attributes": Object {
    "arguments": "0 15 * * * *",
    "type": "@cron",
    "worker": "konnector",
    "worker_arguments": Object {
      "account": "963a51f6cdd34401b0904de32cc5578d",
      "konnector": "test",
    },
  },
}
`;

exports[`Trigger Duck buildKonnectorTrigger creates a trigger with day set to 0 1`] = `
Object {
  "_type": "io.cozy.triggers",
  "attributes": Object {
    "arguments": "0 15 14 * * *",
    "type": "@cron",
    "worker": "konnector",
    "worker_arguments": Object {
      "account": "963a51f6cdd34401b0904de32cc5578d",
      "konnector": "test",
    },
  },
}
`;

exports[`Trigger Duck buildKonnectorTrigger creates a trigger with hours set to 0 1`] = `
Object {
  "_type": "io.cozy.triggers",
  "attributes": Object {
    "arguments": "0 15 0 * * *",
    "type": "@cron",
    "worker": "konnector",
    "worker_arguments": Object {
      "account": "963a51f6cdd34401b0904de32cc5578d",
      "konnector": "test",
    },
  },
}
`;

exports[`Trigger Duck buildKonnectorTrigger creates a trigger without folder 1`] = `
Object {
  "_type": "io.cozy.triggers",
  "attributes": Object {
    "arguments": "0 15 14 * * 4",
    "type": "@cron",
    "worker": "konnector",
    "worker_arguments": Object {
      "account": "963a51f6cdd34401b0904de32cc5578d",
      "konnector": "test",
    },
  },
}
`;

exports[`Trigger Duck buildTriggerFrequencyOptions creates daily options 1`] = `
Object {
  "frequency": "daily",
  "hours": 14,
  "minutes": 15,
}
`;

exports[`Trigger Duck buildTriggerFrequencyOptions creates default weekly options 1`] = `
Object {
  "dayOfWeek": 4,
  "frequency": "weekly",
  "hours": 14,
  "minutes": 15,
}
`;

exports[`Trigger Duck buildTriggerFrequencyOptions creates hourly options 1`] = `
Object {
  "frequency": "hourly",
  "minutes": 15,
}
`;

exports[`Trigger Duck buildTriggerFrequencyOptions creates monthly options 1`] = `
Object {
  "dayOfMonth": 25,
  "frequency": "monthly",
  "hours": 14,
  "minutes": 15,
}
`;
